fixed shopping cart page

--- a/src/product-page.html
+++ b/src/product-page.html
@@ -939,7 +939,16 @@
                 <button id="tabs-2-tab-1" class="relative h-24 bg-white rounded-md flex items-center justify-center text-sm font-medium uppercase text-gray-900 cursor-pointer hover:bg-gray-50 focus:outline-none focus:ring focus:ring-offset-4 focus:ring-opacity-50" aria-controls="tabs-2-panel-1" role="tab" type="button">
                   <span class="sr-only"> Angled view </span>
                   <span class="absolute inset-0 rounded-md overflow-hidden">
-                    <img src="https://tailwindui.com/img/ecommerce-images/product-page-03-product-01.jpg" alt="" class="w-full h-full object-center object-cover">
+                    <img src="assets/img/products/1.jpg" alt="" class="w-full h-full object-center object-cover">
+                  </span>
+                  <!-- Selected: "ring-indigo-500", Not Selected: "ring-transparent" -->
+                  <span class="ring-transparent absolute inset-0 rounded-md ring-2 ring-offset-2 pointer-events-none" aria-hidden="true"></span>
+                </button>
+
+                <button id="tabs-2-tab-1" class="relative h-24 bg-white rounded-md flex items-center justify-center text-sm font-medium uppercase text-gray-900 cursor-pointer hover:bg-gray-50 focus:outline-none focus:ring focus:ring-offset-4 focus:ring-opacity-50" aria-controls="tabs-2-panel-1" role="tab" type="button">
+                  <span class="sr-only"> Angled view </span>
+                  <span class="absolute inset-0 rounded-md overflow-hidden">
+                    <img src="assets/img/products/2.jpg" alt="" class="w-full h-full object-center object-cover">
                   </span>
                   <!-- Selected: "ring-indigo-500", Not Selected: "ring-transparent" -->
                   <span class="ring-transparent absolute inset-0 rounded-md ring-2 ring-offset-2 pointer-events-none" aria-hidden="true"></span>
@@ -952,7 +961,7 @@
             <div class="w-full aspect-w-1 aspect-h-1">
               <!-- Tab panel, show/hide based on tab state. -->
               <div id="tabs-2-panel-1" aria-labelledby="tabs-2-tab-1" role="tabpanel" tabindex="0">
-                <img src="https://tailwindui.com/img/ecommerce-images/product-page-03-product-01.jpg" alt="Angled front view with bag zipped and handles upright." class="w-full h-full object-center object-cover sm:rounded-lg">
+                <img src="assets/img/products/1.jpg" alt="Angled front view with bag zipped and handles upright." class="w-full h-full border-2 border-gray-100 object-center object-cover sm:rounded-lg">
               </div>
   
               <!-- More images... -->
@@ -961,11 +970,11 @@
   
           <!-- Product info -->
           <div class="mt-10 px-4 sm:px-0 sm:mt-16 lg:mt-0">
-            <h1 class="text-3xl font-extrabold tracking-tight text-gray-900">Zip Tote Basket</h1>
+            <h1 class="text-3xl font-bold tracking-tight text-gray-900">گوشی موبایل نوکیا مدل C31 دو سیم کارت ظرفیت 128 گیگابایت و رم 4 گیگابایت</h1>
   
             <div class="mt-3">
               <h2 class="sr-only">Product information</h2>
-              <p class="text-3xl text-gray-900">$140</p>
+              <p class="text-3xl text-gray-900">4,446,000 تومان</p>
             </div>
   
             <!-- Reviews -->
@@ -1010,14 +1019,14 @@
               <h3 class="sr-only">Description</h3>
   
               <div class="text-base text-gray-700 space-y-6">
-                <p>The Zip Tote Basket is the perfect midpoint between shopping tote and comfy backpack. With convertible straps, you can hand carry, should sling, or backpack this convenient and spacious bag. The zip top and durable canvas construction keeps your goods protected for all-day use.</p>
+                <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز</p>
               </div>
             </div>
   
             <form class="mt-6">
               <!-- Colors -->
               <div>
-                <h3 class="text-sm text-gray-600">Color</h3>
+                <h3 class="text-sm text-gray-600">رنگ بندی</h3>
   
                 <fieldset class="mt-2">
                   <legend class="sr-only">Choose a color</legend>
@@ -1056,9 +1065,9 @@
               </div>
   
               <div class="mt-10 flex sm:flex-col1">
-                <button type="submit" class="max-w-xs flex-1 bg-indigo-600 border border-transparent rounded-md py-3 px-8 flex items-center justify-center text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-50 focus:ring-indigo-500 sm:w-full">Add to bag</button>
+                <button type="submit" class="max-w-xs flex-1 bg-indigo-600 border border-transparent rounded-md py-3 px-8 flex items-center justify-center text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-50 focus:ring-indigo-500 sm:w-full">افزودن به سبد خرید</button>
   
-                <button type="button" class="ml-4 py-3 px-3 rounded-md flex items-center justify-center text-gray-400 hover:bg-gray-100 hover:text-gray-500">
+                <button type="button" class="mr-4 py-3 px-3 rounded-md flex items-center justify-center text-gray-400 hover:bg-gray-100 hover:text-gray-500">
                   <!-- Heroicon name: outline/heart -->
                   <svg class="h-6 w-6 flex-shrink-0" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
@@ -1077,7 +1086,7 @@
                     <!-- Expand/collapse question button -->
                     <button type="button" class="group relative w-full py-6 flex justify-between items-center text-left" aria-controls="disclosure-1" aria-expanded="false">
                       <!-- Open: "text-indigo-600", Closed: "text-gray-900" -->
-                      <span class="text-gray-900 text-sm font-medium"> Features </span>
+                      <span class="text-gray-900 text-sm font-medium"> مشخصات فنی </span>
                       <span class="ml-6 flex items-center">
                         <!--
                           Heroicon name: outline/plus-sm
@@ -1100,19 +1109,19 @@
                   </h3>
                   <div class="pb-6 prose prose-sm" id="disclosure-1">
                     <ul role="list">
-                      <li>Multiple strap configurations</li>
+                      <li><span>فناوری صفحه‌نمایش: </span> IPS</li>
   
-                      <li>Spacious interior with top zip</li>
+                      <li>اندازه: 6.75</li>
   
-                      <li>Leather handle and tabs</li>
+                      <li>رزولوشن عکس: 13 مگاپیکسل</li>
   
-                      <li>Interior dividers</li>
+                      <li>نسخه سیستم عامل: Android 12</li>
   
-                      <li>Stainless strap loops</li>
+                      <li>اقلام همراه: دفترچه‌ راهنما، شارژر</li>
   
-                      <li>Double stitched construction</li>
+                      <li>حافظه داخلی	128 گیگابایت</li>
   
-                      <li>Water-resistant</li>
+                      <li>ظرفيت حافظه RAM	4 گیگابایت</li>
                     </ul>
                   </div>
                 </div>
@@ -1124,25 +1133,25 @@
         </div>
   
         <section aria-labelledby="related-heading" class="mt-10 border-t border-gray-200 py-16 px-4 sm:px-0">
-          <h2 id="related-heading" class="text-xl font-bold text-gray-900">Customers also bought</h2>
+          <h2 id="related-heading" class="text-xl font-bold text-gray-900">محصولات مرتبط</h2>
   
           <div class="mt-8 grid grid-cols-1 gap-y-12 sm:grid-cols-2 sm:gap-x-6 lg:grid-cols-4 xl:gap-x-8">
             <div>
               <div class="relative">
                 <div class="relative w-full h-72 rounded-lg overflow-hidden">
-                  <img src="https://tailwindui.com/img/ecommerce-images/product-page-03-related-product-01.jpg" alt="Front of zip tote bag with white canvas, black canvas straps and handle, and black zipper pulls." class="w-full h-full object-center object-cover">
+                  <img src="assets/img/products/3.jpg" alt="Front of zip tote bag with white canvas, black canvas straps and handle, and black zipper pulls." class="w-full h-full object-center object-cover">
                 </div>
                 <div class="relative mt-4">
-                  <h3 class="text-sm font-medium text-gray-900">Zip Tote Basket</h3>
+                  <h3 class="text-sm font-medium text-gray-900 truncate">گوشی موبایل اپل مدل iPhone 11 تک سیم‌ کارت ظرفیت 128 گیگابایت و رم 4</h3>
                   <p class="mt-1 text-sm text-gray-500">White and black</p>
                 </div>
                 <div class="absolute top-0 inset-x-0 h-72 rounded-lg p-4 flex items-end justify-end overflow-hidden">
                   <div aria-hidden="true" class="absolute inset-x-0 bottom-0 h-36 bg-gradient-to-t from-black opacity-50"></div>
-                  <p class="relative text-lg font-semibold text-white">$140</p>
+                  <p class="relative text-lg font-semibold text-white">۲,۲۲۵,۰۰۰ تومان</p>
                 </div>
               </div>
               <div class="mt-6">
-                <a href="#" class="relative flex bg-gray-100 border border-transparent rounded-md py-2 px-8 items-center justify-center text-sm font-medium text-gray-900 hover:bg-gray-200">Add to bag<span class="sr-only">, Zip Tote Basket</span></a>
+                <a href="#" class="relative flex bg-gray-100 border border-transparent rounded-md py-2 px-8 items-center justify-center text-sm font-medium text-gray-900 hover:bg-gray-200">افزودن به سبد خرید<span class="sr-only">, Zip Tote Basket</span></a>
               </div>
             </div>
   
